--- a/requirements.txt
+++ b/requirements.txt
@@ -20,9 +20,11 @@ numpy==1.26.2
 packaging==23.2
 pandas==2.1.3
 Pillow==10.1.0
+prettytable==3.9.0
 protobuf==4.25.1
 pyarrow==14.0.1
 pydeck==0.8.1b0
+pyecharts==2.0.4
 pygments==2.17.2
 python-dateutil==2.8.2
 python-decouple==3.8
@@ -31,10 +33,12 @@ referencing==0.31.1
 requests==2.31.0
 rich==13.7.0
 rpds-py==0.13.2
+simplejson==3.19.2
 six==1.16.0
 smmap==5.0.1
 streamlit==1.28.2
 streamlit-aggrid==0.3.4.post3
+streamlit-echarts==0.4.0
 tenacity==8.2.3
 toml==0.10.2
 toolz==0.12.0
@@ -45,4 +49,5 @@ tzlocal==5.2
 urllib3==2.1.0
 validators==0.22.0
 watchdog==3.0.0
+wcwidth==0.2.12
 zipp==3.17.0
